--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is my react journey from scratch",
   "scripts": {
     "test": "jest",
-    "start":"parcel index.html",
-    "build":"parcel build index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1"
   },
-  "browserslist":["last 3 versions"]
-  
+  "browserslist": [
+    "last 3 versions"
+  ]
 }
